Add blog and project categories

--- a/_posts/blog/2015-11-24-illa-est.markdown
+++ b/_posts/blog/2015-11-24-illa-est.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Illa est"
 date:   2015-11-24 08:09:51 -0800
-categories: jekyll update
+categories: blog
 tags: code inspiration
 ---
 
