--- a/_posts/project/2015-11-22-project-2.markdown
+++ b/_posts/project/2015-11-22-project-2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Nec vestem dixit"
 date:   2015-11-22 08:09:51 -0800
-categories: jekyll update
+categories: project
 tags: snippet design
 ---
 
