--- a/_posts/project/2015-11-23-project-3.markdown
+++ b/_posts/project/2015-11-23-project-3.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Dabat de"
 date:   2015-11-23 08:09:51 -0800
-categories: jekyll update
+categories: project
 tags: design inspiration
 ---
 ## Sacris nova aut aliquid aeternum cinnama
