--- a/_posts/project/2015-11-23-project-3.markdown
+++ b/_posts/project/2015-11-23-project-3.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
-title:  "Dabat de"
+title:  "Project 3"
 date:   2015-11-23 08:09:51 -0800
 categories: project
 tags: design inspiration
+featured_image: "img/project.png"
 ---
 ## Sacris nova aut aliquid aeternum cinnama
 
