--- a/_posts/project/2015-11-21-project-1.markdown
+++ b/_posts/project/2015-11-21-project-1.markdown
@@ -4,7 +4,7 @@ title:  "Project 1"
 date:   2015-11-20 08:09:51 -0800
 categories: project
 tags: snippet 
-featured_image: "img/project.png"
+featured_image: "/img/project.png"
 ---
 ## Usum suam cum dederitis muris
 
