--- a/_posts/project/2015-11-22-project-2.markdown
+++ b/_posts/project/2015-11-22-project-2.markdown
@@ -4,7 +4,7 @@ title:  "Project 2"
 date:   2015-11-22 08:09:51 -0800
 categories: project
 tags: snippet design
-featured_image: "img/project.png"
+featured_image: "/img/project.png"
 ---
 
 ## Longam pertimuitque Hyperione feremus nullae
