--- a/_posts/blog/2015-11-23-dabat-de.markdown
+++ b/_posts/blog/2015-11-23-dabat-de.markdown
@@ -4,6 +4,7 @@ title:  "Dabat de"
 date:   2015-11-23 08:09:51 -0800
 categories: blog
 tags: design inspiration
+post_images: false
 ---
 ## Sacris nova aut aliquid aeternum cinnama
 
