--- a/_posts/project/2015-11-21-project-1.markdown
+++ b/_posts/project/2015-11-21-project-1.markdown
@@ -3,8 +3,9 @@ layout: post
 title:  "Project 1"
 date:   2015-11-20 08:09:51 -0800
 categories: project
-tags: snippet 
+tags: snippet
 featured_image: "/img/project.png"
+post_images: true
 ---
 ## Usum suam cum dederitis muris
 
