--- a/_posts/project/2015-11-22-project-2.markdown
+++ b/_posts/project/2015-11-22-project-2.markdown
@@ -5,6 +5,7 @@ date:   2015-11-22 08:09:51 -0800
 categories: project
 tags: snippet design
 featured_image: "/img/project.png"
+post_images: true
 ---
 
 ## Longam pertimuitque Hyperione feremus nullae
