--- a/_posts/project/2015-11-23-project-3.markdown
+++ b/_posts/project/2015-11-23-project-3.markdown
@@ -5,6 +5,7 @@ date:   2015-11-23 08:09:51 -0800
 categories: project
 tags: design inspiration
 featured_image: "/img/project.png"
+post_images: true
 ---
 ## Sacris nova aut aliquid aeternum cinnama
 
