Made particular posts hidden so they don't show up on portfolio

--- a/_posts/project/2016-4-08-face-off.markdown
+++ b/_posts/project/2016-4-08-face-off.markdown
@@ -6,6 +6,7 @@ categories: project
 tags: snippet
 featured_image: "/img/face_off/faceoff.jpg"
 post_images: true
+published: false
 ---
 ## Special effects make-up artists compete to become Hollywood's next great effects artist!
 
